fix panorama thumbnails on small width resolutions

--- a/2019picos/src/styles/styles.css
+++ b/2019picos/src/styles/styles.css
@@ -40,6 +40,12 @@ body {
   margin: 1px 0;
 }
 
+@media(max-width: 360px) {
+  .custom-stage-media img {
+    max-width: 320px;
+  }
+}
+
 .custom-date {
   font-style: italic;
 }
